# Rustiator

./: .cirrus.yml  Cargo.toml  DockerFile  Dockerfile  readme.md  test.sh
client/: choose_bot.html  choose_bot_edit.html  game.html  index.html  player_vs_bot.html  spectate.html  template.lua  text_editor.html
client/css/: botButtons.css
client/js/: chessboard-1.0.0.js  ugly.chess.js  utils.js
server/: Cargo.toml
server/src/: chess_game.rs  http_server.rs  lib.rs  main.rs  types.rs
src/: browser.rs  chess_engine.rs  chess_game.rs  http_server.rs  lib.rs  lua.rs  main.rs  player_vs_bot.rs  websocket.rs
