[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
anyhow = "1.0.76"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shakmaty = "0.26.0"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
tokio = { version = "1.0", features = ["full"] }
dashmap = "5.5.3"
handlebars = { version = "4.5.0", features = ["dir_source"] }
actix-cors = "0.6.5"
serde_with = "3.4.0"
arrayvec = "0.7.4"
actix-web-actors = "4.2.0"
rand = "0.8.5"
log = "0.4.20"
actix = "0.13.1"
awc = "3.3.0"
tokio-stream = "0.1.14"
env_logger = "0.10.1"
futures-util = "0.3.30"
clap = "3.1"
webbrowser = "0.8.12"
mlua = { version = "0.9.4", features = ["vendored", "luajit52"] }
